--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
 djgpp-toolchain (12) UNRELEASED; urgency=medium
 
   * Set 'Architecture: all' for library packages.
+  * binutils version 2.42.
 
- -- jwt27 <jwjagersma@gmail.com>  Mon, 13 Nov 2023 17:22:09 +0100
+ -- jwt27 <jwjagersma@gmail.com>  Thu, 30 May 2024 19:31:25 +0200
 
 djgpp-toolchain (11) unstable; urgency=medium
 
