--- a/debian/changelog
+++ b/debian/changelog
@@ -2,8 +2,9 @@ djgpp-toolchain (12) UNRELEASED; urgency=medium
 
   * Set 'Architecture: all' for library packages.
   * binutils version 2.42.
+  * gcc version 14.1.0.
 
- -- jwt27 <jwjagersma@gmail.com>  Thu, 30 May 2024 19:31:25 +0200
+ -- jwt27 <jwjagersma@gmail.com>  Sat, 22 Jun 2024 19:31:21 +0200
 
 djgpp-toolchain (11) unstable; urgency=medium
 
