--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
 djgpp-toolchain (13) UNRELEASED; urgency=medium
 
   * binutils version 2.43.1.
+  * gdb version 15.1.
 
- -- jwt27 <jwjagersma@gmail.com>  Mon, 23 Sep 2024 18:22:22 +0200
+ -- jwt27 <jwjagersma@gmail.com>  Mon, 23 Sep 2024 18:48:24 +0200
 
 djgpp-toolchain (12.1) unstable; urgency=medium
 
